--- a/mine3.html
+++ b/mine3.html
@@ -1,3 +1,8 @@
+<!--
+
+    Stream images from server which are screenshots and display them in VR
+
+-->
 
 <!DOCTYPE html>
 <html>
@@ -7,46 +12,18 @@
     <meta name="description" content="Hello, WebVR! • A-Frame">
     <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
   </head>
-  <body>
   
+  <body>
     <script>
+
     //------------------------------------------------------------------------------------------
-    // Web Socket Streaming    
+    // Client   
     //------------------------------------------------------------------------------------------        
     function updateFromHttpServer() {
       var xmlHttp = new XMLHttpRequest();
-      xmlHttp.open( "GET", "http://127.0.0.1:8080", false ); // false for synchronous request
+      xmlHttp.open( "GET", "http://127.0.0.1:8080", false );
       xmlHttp.send( null );
-      //imsrc = "data:image/jpeg;base64," + xmlHttp.responseText;
-      console.log(encode(new Uint8Array(xmlHttp.responseText)));
       imsrc = "data:image/jpeg;base64," + xmlHttp.responseText;
-    }
-        
-    function encode (input) {
-      var keyStr = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
-      var output = "";
-      var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
-      var i = 0;
-
-      while (i < input.length) {
-        chr1 = input[i++];
-        chr2 = i < input.length ? input[i++] : Number.NaN; // Not sure if the index
-        chr3 = i < input.length ? input[i++] : Number.NaN; // checks are needed here
-
-        enc1 = chr1 >> 2;
-        enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
-        enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
-        enc4 = chr3 & 63;
-
-        if (isNaN(chr2)) {
-            enc3 = enc4 = 64;
-        } else if (isNaN(chr3)) {
-            enc4 = 64;
-        }
-        output += keyStr.charAt(enc1) + keyStr.charAt(enc2) +
-                  keyStr.charAt(enc3) + keyStr.charAt(enc4);
-      }
-      return output;
     }
 
     //------------------------------------------------------------------------------------------
@@ -55,7 +32,7 @@
      AFRAME.registerComponent('set-sky', {
        schema: {default:''},
        init: function() {
-         this.timeout = setInterval(this.updateSky.bind(this), 100);
+         this.timeout = setInterval(this.updateSky.bind(this), 300);
          this.sky = this.el;
        },
        remove: function() {
@@ -70,6 +47,7 @@
        }
      });
     //------------------------------------------------------------------------------------------  
+    
     </script>
 
     <a-scene background="color: #ECECEC">
